tests/functional2/lang/builtins.warn/eval-fail-abort.err.exp
warning: meow
error:
       … while calling the 'warn' builtin
         at /pwd/in.nix:1:1:
            1| builtins.warn "meow" (throw "must abort before this")
             | ^
            2|

       error: evaluation aborted (abort-on-warn)
